# tools

./: .gitignore  .gitleaks.toml  .ruff.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  catalog.yaml  ruff.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
anthropic-usage-tracker/: README.md  anthropic_usage_tracker.py  pyproject.toml
anthropic-usage-tracker/tests/: test_anthropic_usage_tracker.py
apple-health-export/: .gitignore  HEALTH_AUTO_EXPORT.md  Makefile  README.md  TESTING.md  health_auto_export.py  health_export.py  health_parser.py  install.sh  pyproject.toml
apple-health-export/tests/: __init__.py  conftest.py  test_health_auto_export.py  test_health_export.py  test_health_parser.py
apple-health-export/tests/fixtures/: sample_export.xml
firefox-2fa-autofill/: README.md  background.js  content-2fa-detector.js  content-google-voice.js  manifest.json  manifest_chrome.json  popup.html  popup.js  test-2fa.html  test_patterns.js
google-takeout-focused/: README.md  google_takeout_focused.py  pyproject.toml
google-takeout-focused/google_takeout_focused/: __init__.py  cli.py  takeout.py
google-takeout-focused/google_takeout_focused.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
google-takeout-focused/tests/: test_google_takeout_focused.py  test_takeout.py
location-data-duckdb/: README.md  config.example.yaml  pyproject.toml
location-data-duckdb/location_data_duckdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
location-data-duckdb/location_pipeline/: __init__.py  cli.py  database.py  runner.py
location-data-duckdb/location_pipeline/enrich/: google_places.py
location-data-duckdb/location_pipeline/sources/: base.py  foursquare_api.py  foursquare_export.py  google_takeout.py  manual_csv.py
location-data-duckdb/tests/: conftest.py  test_database_schema.py  test_foursquare_export_enrichment.py  test_google_takeout_parser.py  test_single_db_run.py
music-history/: README.md  apple_music_export_guard.py  apple_music_export_helper.py  apple_music_export_metadata.json  apple_music_history.jsonl  apple_music_monitor.py  apple_music_musickit_sync.py  apple_music_processor.py  apple_music_sync.py  check_apple_music_export.py  check_apple_music_privacy_export.py  config.py  export_apple_music.py  ingest_apple_music.py  ingest_historical.py  main.py  pyproject.toml  remind_apple_music_reexport.py
music-history/scripts/: lastfm_ingest.py
music-history/tests/: test_apple_music_export_helper.py  test_apple_music_monitor.py  test_apple_music_musickit_sync.py  test_apple_music_processor.py  test_apple_music_sync.py  test_check_apple_music_privacy_export.py  test_ingest_apple_music_staleness.py  test_lastfm_incremental.py  test_lastfm_ingest.py
personal-assistant-ios/: .gitignore  README.md  SETUP.md
personal-assistant-ios/PersonalAssistant.xcodeproj/: project.pbxproj
personal-data-reflection/: .gitignore  QUARTERLY_FEATURES.md  QUICKSTART.md  README.md  config.yaml  generate_sample_data.py  pyproject.toml  reflect.py  requirements.txt  setup_interactive.py
personal-data-reflection/reflector/: __init__.py  data_retention.py  database.py
personal-data-reflection/reflector/analysis/: __init__.py  correlations.py  insights.py  patterns.py
personal-data-reflection/reflector/dashboard/: __init__.py  app.py
personal-data-reflection/reflector/dashboard/static/css/: components.css  correlation-cards.css  dashboard-enhanced.css  design-tokens.css  main.css  variables.css
personal-data-reflection/reflector/dashboard/static/js/: app.js  components.js  dashboard-math.js
personal-data-reflection/reflector/dashboard/templates/: index.html
personal-data-reflection/reflector/importers/: __init__.py  health.py  strava.py
personal-data-reflection/reflector/reports/: __init__.py  monthly.py  quarterly.py
personal-data-reflection/tests/: dashboard-math.test.js  test_dashboard_goals_api.py
scripts/: gcal_backup.py
strava-data-puller/: .env.example  README.md  pyproject.toml  strava_pull.py
(+24 files in other folders)
