[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-takeout-focused"
version = "0.1.0"
description = "Focused Google Takeout ingestion for location timeline, search history, and YouTube Music"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0"
]

[project.scripts]
google-takeout-focused = "google_takeout_focused.cli:main"

[tool.setuptools]
packages = ["google_takeout_focused"]
